# notcoin_botnet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: base_strategy.py  clicker_api.py  helpers.py  main.py  standard_strategy.py  telegram.py
src/custom_types/: __init__.py  arrow_type.py
src/enums/: __init__.py  plausible_event_urls.py  shop_item_type.py
src/models/: requests.py  responses.py  strategy.py  telegram_settings.py
tests/cloudflare_bypass/: main.py
tests/some_boosters_calcucations/: balances.json  balances1.json  calculation.py  main.py
tests/turbo_test/: auth.py  tele_storage.py  test_turbo.py
